--- a/src/main/resources/fxml/KayttajaAdmin.fxml
+++ b/src/main/resources/fxml/KayttajaAdmin.fxml
@@ -12,7 +12,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane id="bgPane" prefHeight="1166.0" prefWidth="2044.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.KayttajaAdminController">
+
+<GridPane id="bgPane" prefHeight="1166.0" prefWidth="2044.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.KayttajaAdminController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.8" minWidth="0.0" prefWidth="384.6000061035156" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="1567.6000244140625" minWidth="10.0" prefWidth="1114.400048828125" />
@@ -57,8 +58,8 @@
       </VBox>
       <GridPane prefHeight="123.0" prefWidth="1541.0" GridPane.columnSpan="2147483647">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.6000030517578" minWidth="10.0" prefWidth="124.80000000000001" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1333.1999267578126" minWidth="10.0" prefWidth="1333.1999267578126" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="421.6000030517578" minWidth="10.0" prefWidth="198.40000610351564" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1333.1999267578126" minWidth="10.0" prefWidth="1263.9999938964843" />
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1479.8" minWidth="10.0" prefWidth="282.6000732421876" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.2000732421875" minWidth="0.0" prefWidth="192.1999267578126" />
         </columnConstraints>
@@ -67,7 +68,7 @@
           <RowConstraints maxHeight="67.99999885559082" minHeight="10.0" prefHeight="55.4" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="126.0" text="TAKAISIN" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="50.0" prefWidth="171.0" text="TAKAISIN" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -83,7 +84,7 @@
                   <Insets right="20.0" />
                </padding>
             </Label>
-            <Button fx:id="LogoutBtn" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="50.0" prefWidth="134.0" text="LOGOUT" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Button fx:id="logoutBtn" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="50.0" prefWidth="162.0" text="LOGOUT" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -104,7 +105,7 @@
             <Insets right="50.0" />
          </GridPane.margin>
       </GridPane>
-      <Label fx:id="bizName1" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="1118.0" text="KÄYTTÄJÄT" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Label fx:id="bizName1" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="898.0" text="KÄYTTÄJÄT" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <font>
             <Font name="System Bold" size="26.0" />
          </font>
